--- a/app.json
+++ b/app.json
@@ -25,8 +25,10 @@
             "description" : "Get From https://my.telegram.org"
         },
         "MONGO_STR" : {
-            "description" : "Leave it empty.",
-            "required" : false
+            "description" : "Get from MongoDB Atlas."
+        },
+        "OWNER_ID" : {
+            "description" : "Your(owner's) telegram id"
         }
     },
     "stack" : "heroku-20",
